Sat Apr 22 23:35:27 2000  Lars Wirzenius  <liw@wapit.com>

	* gwlib/http2.[ch]: Implemented GET CGI argument parsing.

Sat Apr 22 22:55:05 2000  Lars Wirzenius  <liw@wapit.com>

	* gwlib/http2.[ch]: Moved PoolSocket's out of .c into .h and
	renamed them to HTTPSocket. This is because the server also
	needs to use them to keep implementation work easy. Thus, the
	server is represented as an HTTPSocket, not an int. Re-arranged
	some of the internal functions in .c regarding this.
	
	Oh yes, I implemented a bit of the server side part of the
	protocol as well. Need to do CGI argument parsing still.
	
	* test/test_http2_server.c: Wrote test program for server side.

Sat Apr 22 21:07:11 2000  Lars Wirzenius  <liw@wapit.com>

	* gwlib/gwmem.[ch]: Now report the name of the calling function
	as well as the file and source line (this requires a compiler
	that supports __FUNCTION__). Also, added gw_assert_allocated
	for checking that a pointer points at an allocated area.
	
	* gwlib/octstr.c, test/test_mem.c: Made use of gwlib/octstr.c.
	
Sat Apr 22 19:28:52 2000  Lars Wirzenius  <liw@wapit.com>

	* gwlib/gwmem.c: Turned memory checks back on by default.
	
	* gwlib/http2.c: If reading the status fails, close the connection
	and open a new one. If that also fails, *then* report to caller.
	It seems sometimes at least Apache manages to close the connection
	(even though it hasn't been idle for several milliseconds) *after*
	we have sent the request. This masks such a temporary error from
	the library user.
	
	Also, bug fix: We look for an *unused* PoolSocket instead of a
	used when, when allocating.
	
	* test/test_http2.c: Made it possible to run many threads do many
	client operations.

Sat Apr 22 02:57:22 2000  Lars Wirzenius  <liw@wapit.com>

	* test/run-http2-tests, test/test_http.c: Added -s option to
	old HTTP tester as well, and made test/run-http2-tests compare
	the results of the old and new ones as well as lynx.
