@@ -162,6 +162,15 @@ AC_ARG_ENABLE(localtime,
   fi
 ])
 
+dnl --enable-http2 option.
+
+AC_ARG_ENABLE(http2,
+[  --enable-http2	  enable use of experimental HTTP implementation], [
+  if test "$enableval" = yes; then
+      AC_DEFINE(USE_HTTP2)
+  fi
+])
+
 dnl Final Output
 
 AC_OUTPUT(Makefile)
