@@ -26,6 +26,7 @@
 #include "socket.h"
 #include "conffile.h"
 #include "http.h"
+#include "http2.h"
 #include "octstr.h"
 #include "list.h"
 #include "gwassert.h"
